--- a/expense.css
+++ b/expense.css
@@ -12,7 +12,7 @@
 }
 
 body {
-    font-family: 'Bahnschrift', 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+    font-family: "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     background-color: #e0dede;
     margin: 0;
     padding: 0;
